# libkolabxml

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  DEVELOPMENT  README  README-Mac.txt  RELEASE-NOTES  autogen-mingw32.sh  autogen.sh  libkolabxml-version.h.cmake  libkolabxml_0.8.1.orig.tar.gz.delta  libkolabxml_0.8.1.orig.tar.gz.id  libkolabxml_0.8.3.orig.tar.gz.delta  libkolabxml_0.8.3.orig.tar.gz.id  libkolabxml_0.8.4.orig.tar.gz.delta  libkolabxml_0.8.4.orig.tar.gz.id  libkolabxml_1.0.1.orig.tar.gz.delta  libkolabxml_1.0.1.orig.tar.gz.id  libkolabxml_1.0.2.orig.tar.gz.delta  libkolabxml_1.0.2.orig.tar.gz.id  libkolabxml_1.1.0.orig.tar.gz.delta  libkolabxml_1.1.0.orig.tar.gz.id  libkolabxml_1.1.1.orig.tar.gz.delta  libkolabxml_1.1.1.orig.tar.gz.id  tztable.h
cmake/modules/: FindLibkolabxmlDependencies.cmake  LibkolabxmlConfig.cmake.in  LibkolabxmlConfigVersion.cmake.in
compiled/: README  XMLParserWrapper.cpp  XMLParserWrapper.h
debian/: changelog  control  copyright  kolabformat.ini  libkolabxml-dev.install  libkolabxml0.install  libkolabxml0.lintian-overrides  libkolabxml1.lintian-overrides  libkolabxml1.symbols  libkolabxml1v5.install  libkolabxml1v5.symbols  php-kolabformat.install  php-kolabformat.lintian-overrides  php-kolabformat.postinst  php-kolabformat.postrm  php-kolabformat.preinst  php-kolabformat.prerm  python-kolabformat.install  rules  shlibs  watch
debian/patches/: correct-php-search.patch  fix-dev-dependencies.patch  fix-parallel-build.patch  fix-race-condition.patch  kubuntu_01_include_dir.diff  libkolabxml-0.8.1-php-paths.patch  series  xcardconversions-spelling-error.patch  xsdcxx-4.0-support.patch
debian/usr/share/php5/kolab/: kolabformat.ini
schemas/: Makefile.am  kolabformat-xcard.xsd  kolabformat.xsd  xCard.xsd
schemas/ical/: iCalendar-availability-extension.xsd  iCalendar-bw-extensions.xsd  iCalendar-link-extension.xsd  iCalendar-ms-extensions.xsd  iCalendar-props.xsd  iCalendar-valtypes.xsd  iCalendar-wscal-extensions.xsd  iCalendar.rng  iCalendar.xsd  kolabformat-xcal.xsd
src/: CMakeLists.txt  DEVELOPMENT  base64.cpp  base64.h  global_definitions.h  kolabconversions.h  kolabformat.cpp  kolabformat.h  kolabformat.i  objectvalidation.cpp  objectvalidation.h  shared_conversions.h  uriencode.cpp  uriencode.h  utils.cpp  utils.h  xcalconversions.h  xcardconversions.h
src/containers/: incidence_p.h  kolabconfiguration.cpp  kolabconfiguration.h  kolabcontact.cpp  kolabcontact.h  kolabcontainers.cpp  kolabcontainers.h  kolabevent.cpp  kolabevent.h  kolabevent_p.h  kolabfile.cpp  kolabfile.h  kolabfreebusy.cpp  kolabfreebusy.h  kolabfreebusy_p.h  kolabjournal.cpp  kolabjournal.h  kolabnote.cpp  kolabnote.h  kolabtodo.cpp  kolabtodo.h
src/csharp/: CMakeLists.txt  test.cs
src/java/: CMakeLists.txt
src/php/: CMakeLists.txt  test.php
src/python/: CMakeLists.txt  test.py
tests/: CMakeLists.txt  bindingstest.cpp  bindingstest.h  conversiontest.cpp  conversiontest.h  kolabconversationtest.cpp  kolabconversationtest.h  parsingtest.cpp  parsingtest.h  serializers.h  validationtest.cpp  validationtest.h
tests/testfiles/: icalEvent.xml  testConfiguration.xml  testNote.xml  testevent.xml  testkolabevent.xml
tests/testfiles/vcard/: contact.xml
utils/: CMakeLists.txt  kolabformatchecker.cpp  zonetabconversion.py
